Added code to save png outputs of my graphs

--- a/FRED/fred_jnb.ipynb
+++ b/FRED/fred_jnb.ipynb
@@ -2812,7 +2812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2880,6 +2880,7 @@
     "plt.xticks(rotation=45)\n",
     "plt.legend(title='Legend')\n",
     "plt.grid(True)\n",
+    "plt.savefig('Loan_Terms.png')\n",
     "\n",
     "# Show the plot\n",
     "plt.tight_layout()\n",
