--- a/FRED/fed_debt_inflation.ipynb
+++ b/FRED/fed_debt_inflation.ipynb
@@ -45,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_csv.reader object at 0x000001D6D8729480>\n",
+      "<_csv.reader object at 0x000001DE6AEE89A0>\n",
       "CSV Header: ['observation_date', 'FDHBFRBN']\n",
       "['1970-01-01', '55.800']\n",
       "['1970-04-01', '57.700']\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
     "# Show the plot\n",
     "plt.tight_layout()\n",
     "plt.legend()\n",
-    "plt.savefig('Federal_Debt.png')\n",
+    "plt.savefig('../Graphs/Federal_Debt.png')\n",
     "plt.show()"
    ]
   },
@@ -519,7 +519,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_csv.reader object at 0x000001D6DB6CEC20>\n",
+      "<_csv.reader object at 0x000001DE6DFB3A60>\n",
       "CSV Header: ['observation_date', 'T20YIEM']\n",
       "['2004-07-01', '2.80']\n",
       "['2004-08-01', '2.84']\n",
@@ -1063,14 +1063,14 @@
     "\n",
     "# Display the plot\n",
     "plt.tight_layout()  # Adjust the plot to ensure everything fits\n",
-    "plt.savefig('Inflation_Rate.png')\n",
+    "plt.savefig('../Graphs/Inflation_Rate.png')\n",
     "plt.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData_2024_12",
+   "display_name": "Analytics",
    "language": "python",
    "name": "python3"
   },
