--- a/fred_api/fred.ipynb
+++ b/fred_api/fred.ipynb
@@ -9,8 +9,7 @@
     "# Dependencies\n",
     "import requests\n",
     "import json\n",
-    "import pandas as pd\n",
-    "api_key = '2d1f68e5967dae99d0a209f6bd7c44e1'"
+    "import pandas as pd"
    ]
   },
   {
@@ -30,6 +29,7 @@
     }
    ],
    "source": [
+    "from config import api_key\n",
     "params= {\n",
     "    'api_key': api_key,\n",
     "    'file_type': 'json',\n",
