--- a/FRED/fed_debt_inflation.ipynb
+++ b/FRED/fed_debt_inflation.ipynb
@@ -1031,7 +1031,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Analytics",
+   "display_name": "PythonData_2024_12",
    "language": "python",
    "name": "python3"
   },
